--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,6 +8,8 @@
   --color-border: #e8e8e8;
   --radius-md: 5px;
 
+  --font-lato: 'Lato', 'sans-serif';
+
   --animate-loader: loader 1s ease-in-out infinite alternate;
 
   @keyframes loader {
@@ -18,6 +20,10 @@
       transform: scale(100%) rotate(360deg);
     }
   }
+}
+
+* {
+  @apply font-lato;
 }
 
 .container {
