--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,6 +2,7 @@
 
 @theme {
   --color-primary: #f22539;
+  --color-pressed: #c00e20;
   --color-title: #353535;
   --color-paragraph: #5e5e5e;
   --color-placeholder: #bfbfbf;
